network-policy-demo/end_demo/simpson/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "Home of Marge & Homer Simpson"
    openshift.io/display-name: "Simpson"
  name: simpson-prod
spec: {}
