network-policy-demo/end_demo/simpson/default-deny-simpson.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: simpson-prod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
